infrastructure/base/timelord-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timelord-deployment
  labels:
    app: timelord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timelord
  template:
    metadata:
      labels:
        app: timelord
    spec:
      containers:
        - name: timelord
          image: reload/timelord:latest
          ports:
            - containerPort: 80
