infrastructure/base/timelord-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: timelord-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - timelord.example.com
      secretName: timelord-example-com
  rules:
    - host: timelord.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: timelord
              servicePort: 80
